--- a/pyproject.toml
+++ b/pyproject.toml
@@ -170,10 +170,17 @@ ignore = [
     "PT014",  # Ruff bug: Duplicate of test case at index 1 in `@pytest_mark.parametrize`
     "PTH123", # `open()` should be replaced by `Path.open()`
     "PYI042", # Type alias `mode_str_type` should be CamelCase
-    "RET",
-    "RUF001",  # Detect confusable Unicode-to-Unicode units. Introduces bugs
-    "RUF002",  # Detect confusable Unicode-to-Unicode units. Introduces bugs
-    "RUF005",  # Detect confusable Unicode-to-Unicode units. Introduces bugs
+    "RET501", # Do not explicitly `return None` in function if it is the only possible return value
+    "RET502", # Do not implicitly `return None` in function able to return non-`None` value
+    "RET503", # Missing explicit `return` at the end of function able to return non-`None` value
+    "RET504", # Unnecessary assignment to `changelog` before `return` 
+    "RET505", # Unnecessary `else` after `return` statement
+    "RET506", # Unnecessary `else` after `raise` statement
+    "RET507", # Unnecessary `else` after `continue` statement
+    "RET508", # Unnecessary `else` after `break` statement
+    "RUF001", # Detect confusable Unicode-to-Unicode units. Introduces bugs
+    "RUF002", # Detect confusable Unicode-to-Unicode units. Introduces bugs
+    "RUF005", # Detect confusable Unicode-to-Unicode units. Introduces bugs
     "S101",  # Use of `assert` detected
     "S110",  # `try`-`except`-`pass` detected, consider logging the exception
     "SIM105",  # contextlib.suppress
