--- a/pyproject.toml
+++ b/pyproject.toml
@@ -190,7 +190,12 @@ ignore = [
     "TD003",  # For the moment, fix it later: Missing issue link on the line following this TODO
     "TD005",  # Missing issue description after `TODO`
     "TID252", # We want relative imports
-    "TRY",    # I don't know what this is about
+    "TRY002", # Create your own exception
+    "TRY003", # Avoid specifying long messages outside the exception class
+    "TRY004", # Prefer `TypeError` exception for invalid type
+    "TRY201", # Use `raise` without specifying exception name
+    "TRY300", # Consider moving this statement to an `else` block
+    "TRY301", # Abstract `raise` to an inner function
     "UP006",  # Non-PEP 585 annotation. As long as we are not on Python 3.11+
     "UP007",  # Non-PEP 604 annotation. As long as we are not on Python 3.11+
     "UP031",  # Use format specifiers instead of percent format
