--- a/pyproject.toml
+++ b/pyproject.toml
@@ -162,7 +162,6 @@ ignore = [
     "PLW0603", # Using the global statement to update `CUSTOM_RTL_SPECIAL_CHARS` is discouraged
     "PLW1510", # `subprocess.run` without explicit `check` argument
     "PLW2901", # `with` statement variable `img` overwritten by assignment target
-    "PLW3301", # Nested `min` calls can be flattened
     "PT011",   # `pytest.raises(ValueError)` is too broad, set the `match`
     "PT012",   # `pytest.raises()` block should contain a single simple statement
     "PT014",   # Ruff bug: Duplicate of test case at index 1 in `@pytest_mark.parametrize`
@@ -207,6 +206,7 @@ max-complexity = 54  # Recommended: 10
 [tool.ruff.lint.per-file-ignores]
 "_cryptography.py" = ["S304", "S305"]  # Use of insecure cipher / modes, aka RC4 and AES-ECB
 "_encryption.py" = ["S324"]
+"_reader.py" = ["PLW3301"]  # nested-min-max. Nested min and max calls can be flattened into a single call to improve readability.
 "_writer.py" = ["S324"]
 "docs/conf.py" = ["INP001", "PTH100"]
 "json_consistency.py" = ["T201"]
