--- a/pyproject.toml
+++ b/pyproject.toml
@@ -206,12 +206,12 @@ max-complexity = 54  # Recommended: 10
 [tool.ruff.lint.per-file-ignores]
 "_cryptography.py" = ["S304", "S305"]  # Use of insecure cipher / modes, aka RC4 and AES-ECB
 "_encryption.py" = ["S324"]
-"_reader.py" = ["PLW3301"]  # nested-min-max. Nested min and max calls can be flattened into a single call to improve readability.
 "_writer.py" = ["S324"]
 "docs/conf.py" = ["INP001", "PTH100"]
 "json_consistency.py" = ["T201"]
 "make_release.py" = ["S603", "S607", "T201"]
-"pypdf/*" = ["N802", "N803"]  # We first need to deprecate old stuff:
+"pypdf/*" = ["N802", "N803"]  # We first need to deprecate old stuff
+"pypdf/generic/_data_structures.py" = ["PLW3301"]  # nested-min-max. Nested min and max calls can be flattened into a single call to improve readability.
 "sample-files/*" = ["D100", "INP001"]
 "tests/*" = ["ANN001", "ANN201", "B017", "B018", "D103", "D104", "S105", "S106"]
 "tests/test_workflows.py" =  ["T201"]
