ignore for legacy modules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,7 @@ select = ["ALL"]
 ignore = [
     "A001",    # Variable is shadowing a Python builtin
     "A002",    # Function argument is shadowing a Python builtin
+    "A005",    # Module shadows a Python standard-library module
     "ANN204",  # Missing return type annotation for special method `__init__`
     "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
     "ARG001",  # Unused function argument
