--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,7 +129,6 @@ select = ["ALL"]
 ignore = [
     "A001",    # Variable is shadowing a Python builtin
     "A002",    # Function argument is shadowing a Python builtin
-    "A005",    # Module shadows a Python standard-library module
     "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
     "ARG001",  # Unused function argument
     "ARG002",  # Unused method argument
@@ -216,9 +215,11 @@ ignore = [
 max-complexity = 54  # Recommended: 10
 
 [tool.ruff.lint.per-file-ignores]
+"_codecs/symbol.py" = ["A005"]  # Module shadows a Python standard-library module
 "_cryptography.py" = ["S304", "S305"]  # Use of insecure cipher / modes, aka RC4 and AES-ECB
 "_encryption.py" = ["S324"]
 "_writer.py" = ["S324"]
+"types.py" = ["A005"]  # Module shadows a Python standard-library module
 "docs/conf.py" = ["INP001", "PTH100"]
 "json_consistency.py" = ["T201"]
 "make_release.py" = ["S603", "S607", "T201"]
