--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -187,7 +187,7 @@ jobs:
     - name: Check with pre-commit
       run: |
         pip install -r requirements/dev.txt
-        pre-commit run --all-files
+        pre-commit run --all-files --show-diff-on-failure
 
   package:
     name: Build & verify package
