DEV: Tweak pyproject.toml
Remove pre-commit pin from dev dependencies. Remove "if 0:" from exclude_lines.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dev = [
     "black",
     "flit",
     "pip-tools",
+    "pre-commit",
     "pytest-cov",
     "pytest-socket",
     "pytest-timeout",
