--- a/tests/example_files.yaml
+++ b/tests/example_files.yaml
@@ -108,3 +108,5 @@
   url: https://www.joinville.sc.gov.br/wp-content/uploads/2023/11/Pesquisa-de-Precos-Combustiveis-novembro-2023.pdf
 - local_filename: iss2138.pdf
   url: https://github.com/py-pdf/pypdf/files/12483807/AEO.1172.pdf
+- local_filename: iss3268.pdf
+  url: https://github.com/user-attachments/files/20060394/broken.pdf
