MAINT: Improve benchmarking code

--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install requirements (Python 3)
+    - name: Install requirements
       run: |
         pip install -r requirements/ci-3.11.txt
     - name: Install pypdf
@@ -46,4 +46,3 @@ jobs:
         alert-threshold: '200%'
         comment-on-alert: true
         fail-on-alert: true
-        alert-comment-cc-users: '@MartinThoma'
